--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,19 @@
-FROM node:18-alpine
+FROM node:20-alpine
 
+# Set working directory
 WORKDIR /app
 
+# Copy package.json and package-lock.json (if available)
 COPY package*.json ./
+
+# Install dependencies
 RUN npm install
 
+# Copy the rest of the application code
 COPY . .
 
-EXPOSE 3000
-CMD ["npm", "start"]
+# Expose the port Vite runs on
+EXPOSE 5173
+
+# Start the application
+CMD ["npm", "run", "dev"]
